demo-app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bgd
  name: bgd
  namespace: dev-env
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bgd
