demo-app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: bgd
  namespace: dev-env
  labels:
    app: bgd
  annotations:
    argocd.argoproj.io/hook: PostSync
spec:
  host: bgd-dev-env.apps.hubcluster.sandbox1062.opentlc.com
  to:
    kind: Service
    name: bgd
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
